// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check page horizontal layout example against snapshot 1`] = `
.pf-c-page__header-brand-link {
  display: flex;
  align-items: center;
}
.pf-c-page__header-brand {
  display: block;
  padding-left: 1rem;
}
.pf-c-page__header-tools {
  display: block;
  align-items: center;
  margin: 0.5rem 1rem 0.5rem auto;
}
.pf-c-page__header {
  display: flex;
  grid-area: header;
  z-index: 300;
  flex-wrap: wrap;
  align-items: center;
  max-width: 100%;
  min-height: 4.75rem;
}
.pf-c-page__sidebar.pf-m-expanded {
  display: block;
  grid-area: nav;
  grid-row-start: 2;
  grid-column-start: 1;
  z-index: 200;
  width: 80%;
  padding-top: 1rem;
  padding-bottom: 1rem;
  overflow-x: hidden;
  overflow-y: auto;
  background-color: #ffffff;
  transform: translate3d(-100%,0,0);
  box-shadow: 0.75rem 0 0.625rem -0.25rem rgba(3, 3, 3, 0.07);
}
.pf-c-page__main-section {
  display: block;
  padding: 1rem 1rem 1rem 1rem;
  background-color: #ededed;
}
.pf-c-page__main-section.pf-m-light {
  display: block;
  padding: 1rem 1rem 1rem 1rem;
  background-color: #ededed;
}
.pf-c-page__main-section.pf-m-dark-200 {
  display: block;
  padding: 1rem 1rem 1rem 1rem;
  background-color: #ededed;
}
.pf-c-page__main-section.pf-m-dark-100 {
  display: block;
  padding: 1rem 1rem 1rem 1rem;
  background-color: #ededed;
}
.pf-c-page__main {
  display: flex;
  grid-area: main;
  z-index: 100;
  flex-direction: column;
  overflow-x: hidden;
  overflow-y: auto;
}
.pf-c-page.my-page-class {
  display: grid;
  height: 100%;
  grid-template-columns: 1fr;
  grid-template-rows: max-content 1fr;
  grid-template-areas: "header" "main";
}

<Page
  aria-label="Page layout"
  className="my-page-class"
  header={
    <PageHeader
      =""
      aria-label="Toggle global navigation"
      avatar=" | Avatar"
      className=""
      isNavOpen={true}
      logo="Logo"
      logoProps={null}
      nav="Navigation"
      onNavToggle={[Function]}
      showNavToggle={false}
      toolbar="Toolbar"
      topNav={null}
    />
  }
  id="PageId"
  isManagedSidebar={false}
  layout="horizontal"
  onPageResize={null}
  sidebar={
    <PageSidebar
      className=""
      isNavOpen={true}
      nav={null}
    />
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page my-page-class"
    id="PageId"
    layout="horizontal"
  >
    <PageHeader
      =""
      aria-label="Toggle global navigation"
      avatar=" | Avatar"
      className=""
      isNavOpen={true}
      logo="Logo"
      logoProps={null}
      nav="Navigation"
      onNavToggle={[Function]}
      showNavToggle={false}
      toolbar="Toolbar"
      topNav={null}
    >
      <header
        =""
        className="pf-c-page__header"
        nav="Navigation"
        role="banner"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-tools"
        >
          Toolbar
           | Avatar
        </div>
      </header>
    </PageHeader>
    <PageSidebar
      className=""
      isNavOpen={true}
      nav={null}
    >
      <div
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      />
    </PageSidebar>
    <main
      className="pf-c-page__main"
      role="main"
    >
      <PageSection
        className=""
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        className=""
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        className=""
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        className=""
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;

exports[`Check page vertical layout example against snapshot 1`] = `
.pf-c-page__header-brand-link {
  display: flex;
  align-items: center;
}
.pf-c-page__header-brand {
  display: block;
  padding-left: 1rem;
}
.pf-c-page__header-tools {
  display: block;
  align-items: center;
  margin: 0.5rem 1rem 0.5rem auto;
}
.pf-c-page__header {
  display: flex;
  grid-area: header;
  z-index: 300;
  flex-wrap: wrap;
  align-items: center;
  max-width: 100%;
  min-height: 4.75rem;
}
.pf-c-page__sidebar.pf-m-expanded {
  display: block;
  grid-area: nav;
  grid-row-start: 2;
  grid-column-start: 1;
  z-index: 200;
  width: 80%;
  padding-top: 1rem;
  padding-bottom: 1rem;
  overflow-x: hidden;
  overflow-y: auto;
  background-color: #ffffff;
  transform: translate3d(-100%,0,0);
  box-shadow: 0.75rem 0 0.625rem -0.25rem rgba(3, 3, 3, 0.07);
}
.pf-c-page__main-section {
  display: block;
  padding: 1rem 1rem 1rem 1rem;
  background-color: #ededed;
}
.pf-c-page__main-section.pf-m-light {
  display: block;
  padding: 1rem 1rem 1rem 1rem;
  background-color: #ededed;
}
.pf-c-page__main-section.pf-m-dark-200 {
  display: block;
  padding: 1rem 1rem 1rem 1rem;
  background-color: #ededed;
}
.pf-c-page__main-section.pf-m-dark-100 {
  display: block;
  padding: 1rem 1rem 1rem 1rem;
  background-color: #ededed;
}
.pf-c-page__main {
  display: flex;
  grid-area: main;
  z-index: 100;
  flex-direction: column;
  overflow-x: hidden;
  overflow-y: auto;
}
.pf-c-page.my-page-class {
  display: grid;
  height: 100%;
  grid-template-columns: 1fr;
  grid-template-rows: max-content 1fr;
  grid-template-areas: "header" "main";
}

<Page
  aria-label="Page layout"
  className="my-page-class"
  header={
    <PageHeader
      =""
      aria-label="Toggle global navigation"
      avatar=" | Avatar"
      className=""
      isNavOpen={true}
      logo="Logo"
      logoProps={null}
      onNavToggle={[Function]}
      showNavToggle={false}
      toolbar="Toolbar"
      topNav={null}
    />
  }
  id="PageId"
  isManagedSidebar={false}
  onPageResize={null}
  sidebar={
    <PageSidebar
      className=""
      isNavOpen={true}
      nav="Navigation"
    />
  }
>
  <div
    aria-label="Page layout"
    className="pf-c-page my-page-class"
    id="PageId"
  >
    <PageHeader
      =""
      aria-label="Toggle global navigation"
      avatar=" | Avatar"
      className=""
      isNavOpen={true}
      logo="Logo"
      logoProps={null}
      onNavToggle={[Function]}
      showNavToggle={false}
      toolbar="Toolbar"
      topNav={null}
    >
      <header
        =""
        className="pf-c-page__header"
        role="banner"
      >
        <div
          className="pf-c-page__header-brand"
        >
          <a
            className="pf-c-page__header-brand-link"
          >
            Logo
          </a>
        </div>
        <div
          className="pf-c-page__header-tools"
        >
          Toolbar
           | Avatar
        </div>
      </header>
    </PageHeader>
    <PageSidebar
      className=""
      isNavOpen={true}
      nav="Navigation"
    >
      <div
        className="pf-c-page__sidebar pf-m-expanded"
        id="page-sidebar"
      >
        Navigation
      </div>
    </PageSidebar>
    <main
      className="pf-c-page__main"
      role="main"
    >
      <PageSection
        className=""
        variant="default"
      >
        <section
          className="pf-c-page__main-section"
        >
          Section with default background
        </section>
      </PageSection>
      <PageSection
        className=""
        variant="light"
      >
        <section
          className="pf-c-page__main-section pf-m-light"
        >
          Section with light background
        </section>
      </PageSection>
      <PageSection
        className=""
        variant="dark"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-200"
        >
          Section with dark background
        </section>
      </PageSection>
      <PageSection
        className=""
        variant="darker"
      >
        <section
          className="pf-c-page__main-section pf-m-dark-100"
        >
          Section with darker background
        </section>
      </PageSection>
    </main>
  </div>
</Page>
`;
